# chicago-newsletter-aggregator

./: .gitignore  CLAUDE.md  README.md
backend/: .coverage  Makefile  README.md  SCHEMA.md  email_parser.py  llm_processor.py  main.py  mypy.ini  newsletter_scraper.py  pyproject.toml  scrape_newsletters.py
backend/config/: __init__.py  llm_pricing.json  privacy_patterns.json  privacy_patterns.py
backend/docs/: ARCHITECTURE_POLYMORPHIC_NOTIFICATIONS.md  LOCAL_LLM_PROCESSING.md
backend/migrations/: 001_notification_system.sql  002_add_search_term.sql  003_weekly_rules_no_ward_filter.sql  003_weekly_topic_reports.sql  004_polymorphic_notifications.sql
backend/models/: __init__.py  newsletter.py  notification.py  source.py  types.py  weekly_report.py
backend/notifications/: __init__.py  email_sender.py  error_logger.py  process_notification_queue.py  rule_matcher.py  test_matcher.py  unsubscribe_tokens.py  weekly_notification_queue.py
backend/processing/: llm_client.py  llm_processor.py  reprocess_newsletters.py  weekly_report_generator.py
backend/prompts/: __init__.py  weekly_synthesis.py
backend/shared/: db.py  utils.py
backend/sql/: schema.sql
backend/tests/: test_sanitization.py  test_sanitization_comprehensive.py  test_user_cases.py
backend/utils/: __init__.py  calculate_token_costs.py  cost_calculator.py  cost_report_generator.py  download_samples.py  migrate_topics.py  newsletter_token_analyzer.py  preview_weekly_digest.py  process_llm_metadata.py  process_weekly_reports.py  reprocess_newsletters.py  reprocess_newsletters_privacy.py  time_tests.py  (+2 more)
(+115 files in other folders)
